Harden milvus IT test fixtures